Closed Bug 987292 Opened 12 years ago Closed 12 years ago

drawImage does not resample outside source rect

Categories

(Core :: Graphics: Canvas2D, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla31

People

(Reporter: cabanier, Assigned: cabanier)

Details

Attachments

(1 file)

When image smoothing is enable and there is scaling of the source data, the browser is supposed to sample the original image data. See my email to WhatWG: http://lists.whatwg.org/htdig.cgi/whatwg-whatwg.org/2014-March/084578.html This bug does not happen on the D2D backend.
Assignee: nobody → cabanier
Comment on attachment 8395937 [details] [diff] [review] New implementation for DrawTargetCG::DrawSurface Updated DrawTargetCG::DrawSurface so drawImage will look outside of the source rectangle. This should also make drawImage faster since it no longer has to make a temporary image.
Attachment #8395937 - Flags: review?(vladimir)
Comment on attachment 8395937 [details] [diff] [review] New implementation for DrawTargetCG::DrawSurface bouncing over to Jeff for review
Attachment #8395937 - Flags: review?(vladimir) → review?(jmuizelaar)
Attachment #8395937 - Flags: review?(jmuizelaar) → review+
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: