Bug 987292 - drawImage does not resample outside source rect r=jmuizelaar